add navbar navbar logo and intro heading

--- a/index.html
+++ b/index.html
@@ -12,8 +12,44 @@
     <title>Timur Ikramov Web Portfolio</title>
   </head>
   <body>
-    <h1>Hey, I am Timur</h1>
-
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #C8C7D8;">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"><img class="sm" src="images/logo-top.svg" alt="logo"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Previous Clients</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
+    <!-- Dropdown Navigation -->
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#">FAQ</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">Help</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="container">
+      <h3 class="title-text">Hello</h3>
+      <h1 class="title-text text-uppercase">I am Tim Ikramov</h1>
+      <h4 class="title-text text-uppercase">Web Developer/ Graphic Designer</h4>
+    </div>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
