--- a/portfolio.html
+++ b/portfolio.html
@@ -9,17 +9,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
-    <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet"> 
     <title>Timur Ikramov Web Portfolio</title>
   </head>
   <body>
-    <!-- Header space -->
-    <header class="header-space">
-      <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #C8C7D8;">
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #C8C7D8;">
       <div class="container-fluid">
-        <a class="navbar-brand " href="#"><img class="sm" src="images/logo-top.svg" alt="logo" width="80" height="60"></a>
+        <a class="navbar-brand" href="#"><img class="sm" src="images/logo-top.svg" alt="logo"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -50,30 +45,13 @@
         </div>
       </div>
     </nav>
-  </header>
-  <main class="main-section">
-  <section class="banner">
     <div class="container">
-        <div class="row">
-            <div class="col-lg-6 col-md-12 main-title">
-                <h3 class="title-text">Hello</h3>
-                <h1 class="title-text text-uppercase">I am TIm Ikramov</h1>
-                <h4 class="title-text text-uppercase">Web Developer / Graphic Designer</h4>
-                <div class="site-buttons">
-                    <div class="d-flex flex-row flex-wrap">
-                        <button type="button" class="btn button secondary-button text-uppercase">View Resume</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-6 col-md-12 banner-image">
-                <img class="img-fluid" src="images/main-illustration.svg" alt="banner-img">
-            </div>
-          </div>
-      </div>
-  </section>
-</main>
-    
+      <h3 class="title-text">Hello</h3>
+      <h1 class="title-text text-uppercase">I am Tim Ikramov</h1>
+      <h4 class="title-text text-uppercase">Web Developer/ Graphic Designer</h4>
+    </div>
     <!-- Optional JavaScript; choose one of the two! -->
+
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 
