--- a/index.html
+++ b/index.html
@@ -4,18 +4,25 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Timur Ikramov Web Portfolio</title>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+   
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet"> 
-    <title>Timur Ikramov Web Portfolio</title>
+
+    <!-- Load font awesome icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
-  <body>
+
+  <body> 
     <!-- Header space -->
+
     <header class="header-space">
       <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #C8C7D8;">
       <div class="container-fluid">
@@ -38,8 +45,10 @@
               <a class="nav-link" href="#">Previous Clients</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
-    <!-- Dropdown Navigation -->
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>   
+   
+          <!-- Dropdown Navigation -->
+
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="#">FAQ</a></li>
                 <li><hr class="dropdown-divider"></li>
@@ -51,28 +60,147 @@
       </div>
     </nav>
   </header>
+
+  <!-- Main section start -->
+
   <main class="main-section">
-  <section class="banner">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-6 col-md-12 main-title">
-                <h3 class="title-text">Hello</h3>
-                <h1 class="title-text text-uppercase">I am TIm Ikramov</h1>
-                <h4 class="title-text text-uppercase">Web Developer / Graphic Designer</h4>
-                <div class="site-buttons">
-                    <div class="d-flex flex-row flex-wrap">
-                        <button type="button" class="btn button secondary-button text-uppercase">View Resume</button>
-                    </div>
-                </div>
+    <section class="banner">
+      <div class="container">
+          <div class="row">
+              <div class="col-lg-6 col-md-12 main-title">
+                  <h3 class="title-text">Hello</h3>
+                  <h1 class="title-text text-uppercase">I am Tim Ikramov</h1>
+                  <h4 class="title-text text-uppercase">Web Developer / Graphic Designer</h4>
+                  <div class="site-buttons">
+                      <div class="d-flex flex-row flex-wrap">
+                        <button type="button" class="btn btn-secondary" href="about.html">VIEW RESUME</button>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-lg-6 col-md-12 banner-image">
+                  <img class="img-fluid" src="images/main-illustration.svg" alt="banner-img">
+              </div>
             </div>
-            <div class="col-lg-6 col-md-12 banner-image">
-                <img class="img-fluid" src="images/main-illustration.svg" alt="banner-img">
-            </div>
+        </div>
+    </section>
+    <section class="services-area">
+      <div class="container py-5">
+          <div class="row">
+              <div class="col-lg-12 text-center services">
+                  <h1 class="text-uppercase title-text py-5">Services Offers</h1>
+              </div>
+          </div>
+          <div class="container services-list">
+              <div class="row">
+                  <div class="col-lg-3 col-md-6 col-sm-12">
+                      <div class="services">
+                          <div class="sevices-img text-center py-4">
+                              <img src="images/web-development.svg" alt="services-1" width="80px" style="fill: #6C63FF">
+                          </div>
+                          <div class="card-body text-center">
+                              <h5 class="card-title text-uppercase font-roboto">WEB DEV</h5>
+                              <p class="card-text text-secondary">
+                                you company's website development, mobile applications and other web tools.
+                              </p>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col-lg-3 col-md-6 col-sm-12">
+                      <div class="services">
+                          <div class="sevices-img text-center py-4">
+                              <img src="images/ux.svg" alt="services-2" width="80px">
+                          </div>
+                          <div class="card-body text-center">
+                              <h5 class="card-title text-uppercase font-roboto">UX/UI DESIGN</h5>
+                              <p class="card-text text-secondary">
+                                Client-focused, creating user and customer experiences designed to have engagement and tangible business results
+                              </p>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col-lg-3 col-md-6 col-sm-12">
+                      <div class="services">
+                          <div class="sevices-img text-center py-4">
+                              <img src="images/teamwork.svg" alt="services-3" width="80px">
+                          </div>
+                          <div class="card-body text-center">
+                              <h5 class="card-title text-uppercase font-roboto">BRANDING</h5>
+                              <p class="card-text text-secondary">
+                                Bringing the feel and brand recognition to your company, with graphic design, print, and social media.
+                              </p>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col-lg-3 col-md-6 col-sm-12">
+                      <div class="services">
+                          <div class="sevices-img text-center py-4">
+                              <img src="images/success.svg" alt="services-4" width="80px">
+                          </div>
+                          <div class="card-body text-center">
+                              <h5 class="card-title text-uppercase font-roboto">MARKETING</h5>
+                              <p class="card-text text-secondary">
+                                Promoting your brand with its strengths to bring out the most from your business.
+                              </p>
+                          </div>
+                      </div>
+                  </div>
+              </div>
           </div>
       </div>
   </section>
+  <!-- Previous Clients and brand section -->
+
+    <section class="brand-section">
+      <div class="container-fluid">
+          <div class="first-row row">
+            <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="single-brand">
+                    <img class="client-1 img-thumbnail rounded float-start" src="icons/dima-favicon-logo.svg" alt="client-1" width="150">
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="single-brand">
+                    <img class="client-2 img-thumbnail" src="icons/main_logo.svg" alt="client-2" width="200" height="150">
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="single-brand">
+                    <img class=" client-3 img-thumbnail" src="icons/makersforge_logo.svg" alt="client-3" width="150">
+                </div>
+              </div>
+              </div>
+          </div>
+      </div>
+    </section>
+
 </main>
-    
+<footer class="footer-area">
+  <div class="container">
+        <div class="site-logo text-center">
+            <a href="#"><img src="images/logo-top.svg" alt="logo"></a>
+        </div>
+        <div class="icon-bar text-center">
+          <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
+          <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
+          <a href="#" class="google"><i class="fa fa-google"></i></a>
+          <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+          <a href="#" class="youtube"><i class="fa fa-youtube"></i></a>
+        </div>
+        <div class="copyright text-center">
+            <p>
+                Copyright ©2021 All rights reserved | Timur Ikramov
+            </p>
+        </div>
+  </div>
+</footer>
+
+
+
+
+
+
+
+
     <!-- Optional JavaScript; choose one of the two! -->
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
